Chapter 09/k8srequiredrunasnonroot_template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8srequiredrunasnonroot
spec:
  crd:
    spec:
      names:
        kind: K8sRequiredRunAsNonRoot
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequiredrunasnonroot
        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          not container.securityContext.runAsNonRoot
          msg := "Containers must set securityContext.runAsNonRoot to true"
        }
